# IPDPS_2021_Graph_Coarsening

./: .gitmodules  README.md  build_and_usage_instructions.txt
cmg/: .gitignore  CMakeLists.txt  ExperimentLoggerUtil.cpp  Makefile  README.md  base_config.txt  benchmark.sh  benchmarkParse.py  cmg.cpp  coarsen_kokkos.h  cond_config.txt  csr2mtx.cpp  dataVisualize.py  definitions_kokkos.h  eigensolve_kokkos.h  fourpart_config.txt  heuristics.h  jsonExperimentRunner.py  mtx2csr.cpp  mtx2csr_large.cpp  sgpar.c  sgpar.cpp  sgpar.h  tests.cpp  textStatsToCSV.py
kokkos-kernels/src/common/: KokkosKernels_HashmapAccumulator.hpp  KokkosKernels_HashmapAccumulator.hpp.orig
kokkos-kernels/src/sparse/impl/: KokkosSparse_spgemm_impl_compression.hpp  KokkosSparse_spgemm_impl_compression.hpp.orig
