#IMPORTANT: Use the cmake flag -DCMAKE_CXX_COMPILER=/path/to/your/nvcc_wrapper
cmake_minimum_required(VERSION 3.13)
project(sgpar CXX)
set(CMAKE_CXX_STANDARD 11)
set(CMAKE_CXX_STANDARD_REQUIRED True)

#change the first parameter to wherever your kokkos and kokkos-kernels are located
#add_subdirectory(/home/mike/workspace/kokkos bin_kokkos/)
#add_subdirectory(/home/mike/workspace/kokkos-kernels bin_kernels/)
find_package(KokkosKernels REQUIRED)
link_libraries(Kokkos::kokkos Kokkos::kokkoskernels)
add_compile_options(-O3)
#add_compile_options(-g -DDEBUG)

add_executable(hec_spec sgpar.cpp)
add_executable(hec_spec_serial sgpar.cpp)
add_executable(hec2_spec sgpar.cpp)
add_executable(hec3_spec sgpar.cpp)
add_executable(hec_spec_spgemm sgpar.cpp)
add_executable(hec_spec_hashmap sgpar.cpp)
add_executable(match_spec sgpar.cpp)
add_executable(mtmetis_spec sgpar.cpp)
add_executable(mis_spec sgpar.cpp)
add_executable(gosh2_spec sgpar.cpp)
add_executable(gosh_spec sgpar.cpp)
add_executable(hec_fm sgpar.cpp)
add_executable(hec2_fm sgpar.cpp)
add_executable(hec3_fm sgpar.cpp)
add_executable(match_fm sgpar.cpp)
add_executable(mtmetis_fm sgpar.cpp)
add_executable(mis_fm sgpar.cpp)
add_executable(gosh2_fm sgpar.cpp)
add_executable(gosh_fm sgpar.cpp)
add_executable(hec_recoarsen sgpar.cpp)
add_executable(mt_recoarsen sgpar.cpp)

#possible flags are FM, RADIX, HASHMAP, RECOARSEN, MTMETIS, EXPERIMENT, USE_GNU_PARALLELMODE, _KOKKOS
#add_compile_definitions(_KOKKOS EXPERIMENT RADIX RECOARSEN)
target_compile_definitions(hec_spec PUBLIC _KOKKOS EXPERIMENT HEC RADIX)
target_compile_definitions(hec_spec_serial PUBLIC _KOKKOS EXPERIMENT HEC_SERIAL RADIX)
target_compile_definitions(hec2_spec PUBLIC _KOKKOS EXPERIMENT HEC_V2 RADIX)
target_compile_definitions(hec3_spec PUBLIC _KOKKOS EXPERIMENT HEC_V3 RADIX)
target_compile_definitions(hec_spec_spgemm PUBLIC _KOKKOS EXPERIMENT HEC SPGEMM)
target_compile_definitions(hec_spec_hashmap PUBLIC _KOKKOS EXPERIMENT HEC HASHMAP)
target_compile_definitions(match_spec PUBLIC _KOKKOS EXPERIMENT PUREMATCH RADIX)
target_compile_definitions(mtmetis_spec PUBLIC _KOKKOS EXPERIMENT MTMETIS RADIX)
target_compile_definitions(mis_spec PUBLIC _KOKKOS EXPERIMENT MIS RADIX)
target_compile_definitions(gosh_spec PUBLIC _KOKKOS EXPERIMENT GOSH RADIX)
target_compile_definitions(gosh2_spec PUBLIC _KOKKOS EXPERIMENT GOSH_V2 RADIX)
target_compile_definitions(hec_fm PUBLIC _KOKKOS EXPERIMENT HEC RADIX FM)
target_compile_definitions(hec2_fm PUBLIC _KOKKOS EXPERIMENT HEC_V2 RADIX FM)
target_compile_definitions(hec3_fm PUBLIC _KOKKOS EXPERIMENT HEC_V3 RADIX FM)
target_compile_definitions(match_fm PUBLIC _KOKKOS EXPERIMENT PUREMATCH RADIX FM)
target_compile_definitions(mtmetis_fm PUBLIC _KOKKOS EXPERIMENT MTMETIS RADIX FM)
target_compile_definitions(mis_fm PUBLIC _KOKKOS EXPERIMENT MIS RADIX FM)
target_compile_definitions(gosh_fm PUBLIC _KOKKOS EXPERIMENT GOSH RADIX FM)
target_compile_definitions(gosh2_fm PUBLIC _KOKKOS EXPERIMENT GOSH_V2 RADIX FM)
target_compile_definitions(hec_recoarsen PUBLIC _KOKKOS EXPERIMENT HEC MTMETIS RADIX FM RECOARSEN)
target_compile_definitions(mt_recoarsen PUBLIC _KOKKOS EXPERIMENT MTMETIS RADIX FM RECOARSEN)
